user doesnt update location, so no need to send this in update packet

--- a/src/views/jade/footer.jade
+++ b/src/views/jade/footer.jade
@@ -14,6 +14,6 @@ footer
             a(href="/logout") Log out
 
     - else
-        p If you'd like to save a record of your sightings, please 
+        p If you'd like to keep a record of your sightings, please 
             !=partial('fb')
             // !=partial('fb_login')
