--- a/src/views/jade/sighting/edit.jade
+++ b/src/views/jade/sighting/edit.jade
@@ -18,7 +18,7 @@
       p Denomination:
         input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
       p Location: 
-        input(type="text", id="locationInput", name="sighting[location]", value="#{sighting.location}", disabled="true")
+        input(type="text", name="sighting[location]", value="#{sighting.location}", disabled="true")
       p Comment (Optional):
         input(type="text", name="sighting[comment]", value="#{sighting.comment}")
       p
