--- a/src/views/jade/sighting/edit.jade
+++ b/src/views/jade/sighting/edit.jade
@@ -16,7 +16,7 @@
       p Currency:
         input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
       p Denomination:
-        input(type="text", name="sighting[denomination]", value="#{bill.denomination}")
+        input(type="text", name="sighting[denomination]", value="#{bill.denomination}", disabled="true")
       p Location: 
         input(type="text", name="sighting[location]", value="#{sighting.location}", disabled="true")
       p Comment (Optional):
