--- a/src/views/jade/sighting/edit.jade
+++ b/src/views/jade/sighting/edit.jade
@@ -6,22 +6,35 @@
     !=partial('messages')
     
     form(method="post", action="/sightings/!=sighting.id")
-      input(type="hidden", name="_method", value="put")
+      fieldset
+        legend Edit bill details:
 
-      //- To preserve existing id (know when to update or when to add)
-      input(type="hidden", name="sighting[_id]", value="#{sighting._id}")
+        input(type="hidden", name="_method", value="put")
+        input(type="hidden", name="sighting[_id]", value="#{sighting._id}")
 
-      p Serial:
-        input(type="text", name="sighting[serial]", value="#{sighting.serial}")
-      p Currency:
-        input(type="text", name="sighting[currency]", value="#{bill.currency}", disabled="true")
-      p Denomination:
-        input(type="text", name="sighting[denomination]", value="#{bill.denomination}", disabled="true")
-      p Location: 
-        input(type="text", name="sighting[location]", value="#{sighting.location}", disabled="true")
-      p Comment (Optional):
-        input(type="text", name="sighting[comment]", value="#{sighting.comment}")
-      p
-        button(class="btn primary", type="submit", value="Update") Update
+        .clearfix
+          label(for="serialInput") Serial:
+          .input
+            input.xlarge(type="text", id="serialInput", name="sighting[serial]", value="#{sighting.serial}", size="30")
+        .clearfix
+          label(for="currencyInput") Currency:
+          .input
+            input(type="text", id="currencyInput", name="sighting[currency]", value="#{bill.currency}", disabled="true", size="30")
+        .clearfix
+          label(for="denominationInput") Denomination:
+          .input
+            input(type="text", id="denominationInput", name="sighting[denomination]", value="#{bill.denomination}", size="10", disabled="true")
+        .clearfix
+          label(for="locationInput") Location:
+          .input
+            input(type="text", id="locationInput", name="sighting[location]", value="#{sighting.location}", size="30")
+        .clearfix
+          label(for="commentInput") Comment: (Optional)
+          .input
+            input(type="text", id="commentInput", name="sighting[comment]", value="#{sighting.comment}", size="30")
+        p
+        p
+          button(class="btn primary", type="submit", value="Update") Update
+
   .span3
       h3 Secondary content
