putting add new sighting button back on sightings index

--- a/src/views/jade/sighting/index.jade
+++ b/src/views/jade/sighting/index.jade
@@ -53,6 +53,9 @@
 
                 - })
 
+        a(href="/sightings/add")
+            button(class="btn primary", type="submit", value="Update") Add New Sighting
+
     //- .span3
     //-     a(href="/sightings/add")
     //-         button(class="btn primary", type="submit", value="Update") Add New Sighting          
