align right the Your Account button

--- a/src/views/jade/header.jade
+++ b/src/views/jade/header.jade
@@ -9,6 +9,7 @@
                     a(href="/sightings") Sightings
                 li
                     a(href="/bills") Bills
+            ul.nav.secondary-nav
                 li
                     a(href="/account") Your Account
             
