locking in to version 2.5.11 of express before fixing migration issues

--- a/src/views/jade/messages.jade
+++ b/src/views/jade/messages.jade
@@ -1,5 +1,5 @@
-// - if (hasMessages)
-//     - messages().forEach(function(msg){
-//         div(class="alert-message error")
-//           p= msg
-//     - })
+- if (hasMessages)
+    - messages().forEach(function(msg){
+        div(class="alert-message error")
+          p= msg
+    - })
